--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -5,3 +5,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@media (max-width: 815px) {
+  .container-header {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }  
+}
