--- a/src/Pages/Contato/styles.css
+++ b/src/Pages/Contato/styles.css
@@ -12,10 +12,6 @@
   color: #33323D;
 }
 
-.container-contato h1 {
-  margin-bottom: 20px;
-}
-
 .container-contato p {
   width: 400px;
 
@@ -34,4 +30,26 @@
   display: flex;
   justify-content: right;
   gap: 50px;
+}
+
+.rigth-contato p {
+  font-size: 1.6rem;
+}
+
+@media (max-width: 1010px) {
+  .container-contato {
+    display: flex;
+    gap: 50px;
+  }
+}
+
+@media (max-width: 893px) {
+  .container-contato {
+    margin-left: 50px;
+    padding-top: 40px;
+
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
 }
