--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -2,22 +2,14 @@
   width: 100vw;
   height: calc(100vh - 85px);
 
-  background-image: url("../../Assets/juandesouza_frameworks-de-desenvolvedores.jpg");
+  background-image: url("../../Assets/fundo-home.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-
-  display: flex;
-  align-items: flex-end;
-
-  color: #33323D;
 }
 
-.apresentacao {
-  background-color: #fff;
-
-  margin-left: 200px;
-  padding: 20px;
-
-  font-size: 28px;
+@media (max-width: 815px) {
+  .container-home {
+    background-position-y:50px;
+  }
 }
