--- a/src/Pages/Portfolio/styles.css
+++ b/src/Pages/Portfolio/styles.css
@@ -2,23 +2,14 @@
   width: 100vw;
   height: calc(100vh - 85px);
 
-  background-image: url("../../Assets/juandesouza_frameworks-de-desenvolvedores.jpg");
+  background-image: url("../../Assets/fundo-portfolio.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-
-  display: flex;
-  justify-content:end;
-  align-items:flex-start;
-
-  color: #33323D;
 }
 
-.msg {
-  background-color: #fff;
-
-  margin-right: 200px;
-  padding: 20px;
-
-  font-size: 28px;
+@media (max-width: 815px) {
+  .container-portfolio {
+    background-position-y:50px;
+  }
 }
