--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,5 +24,5 @@ code {
 
 h1 {
   font-family: 'Ibarra Real Nova', serif;
-  font-size: 40px;
+  font-size: 4.0rem;
 }
