--- a/src/Pages/Contato/styles.css
+++ b/src/Pages/Contato/styles.css
@@ -20,6 +20,8 @@
   text-align: justify;
   text-indent: 25px;
   line-height: 25px;
+
+  font-size: 1.6rem;
 }
 
 .container-contato nav {
@@ -32,13 +34,8 @@
   gap: 50px;
 }
 
-.rigth-contato p {
-  font-size: 1.6rem;
-}
-
 @media (max-width: 1010px) {
   .container-contato {
-    display: flex;
     gap: 50px;
   }
 }
@@ -51,5 +48,24 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container-contato {
+    max-width: 75%;
+  }
+  
+  .container-contato nav, .container-contato p  {
+    width: 280px;
+  }
+}
+
+@media (max-width: 350px) {
+  .container-contato {
+    margin-left: 30px;
+  }
+  .container-contato nav, .container-contato p {
+    width: 220px;
   }
 }
